--- a/cms/src/app/documents/document-list/document-list.component.html
+++ b/cms/src/app/documents/document-list/document-list.component.html
@@ -1,14 +1,18 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <div class="row pad-left-right" style="padding: 0 15px;">
-      <span class="pull-left title" style="padding-top: 7px;">Add Documents</span>
+    <div class="row pad-left-right">
+      <span class="pull-left title">Documents</span>
       <a class="btn btn-success pull-right">Add Document</a>
     </div>
   </div>
   <div class="panel-body">
     <div class="center-panel">
-      <!--Add tag to display a list of DocumentItem components-->
-      <app-document-item></app-document-item>
+      <app-document-item 
+        *ngFor="let eachDocument of documents"
+        [document]="eachDocument"
+        (click)="onSelectedDocument(eachDocument)"
+      ></app-document-item>
     </div>
   </div>
+
 </div>
