--- a/cms/src/app/documents/documents.component.html
+++ b/cms/src/app/documents/documents.component.html
@@ -1,10 +1,16 @@
 <div class="row">
     <div class="col-md-5">
     <!--Add tag to load the DocumentListComponent here-->
-    <app-document-list></app-document-list>
+    <app-document-list (selectedDocumentEvent)="selectedDocument=$event"></app-document-list>
     </div>
     <div class="col-md-4">
     <!--Add tag to load the DocumentDetailComponent here-->
-    <app-document-detail></app-document-detail>
+    <app-document-detail 
+    [document]="selectedDocument"
+    *ngIf="selectedDocument; else info"
+    ></app-document-detail>
+    <ng-template #info>
+        <p>Please select a document</p>
+    </ng-template>
     </div>
 </div>
