--- a/cms/src/app/header.component.html
+++ b/cms/src/app/header.component.html
@@ -10,11 +10,13 @@
                 <li><a href="#" (click)="onSelected('contacts')">Contacts</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
+                <li class="dropdown" appDropdown>
                     <a href="#" class="dropdown-toggle" role="button">User <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">User 1</a></li>
-                        <li><a href="#">User 2</a></li>
+                        <li><a href="#">Login</a></li>
+                        <li><a href="#">Other</a></li>
+                        <hr style="margin-top: 5px;margin-bottom:5px;">
+                        <li><a href="#">Logout</a></li>
                     </ul>
                 </li>
             </ul>
